// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<descriptions> demo: render [align] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"arco-descriptions arco-descriptions-layout-horizontal arco-descriptions-size-medium\\">
      <div class=\\"arco-descriptions-title\\">User Info</div>
      <div class=\\"arco-descriptions-body\\">
        <table class=\\"arco-descriptions-table\\">
          <tbody>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Name</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"1\\">Socrates</td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Mobile</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"1\\">123-1234-1234</td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Residence</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"1\\">Beijing</td>
            </tr>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Hometown</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"1\\">Beijing</td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Address</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"3\\">Yingdu Building, Zhichun Road, Beijing</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"arco-descriptions arco-descriptions-layout-horizontal arco-descriptions-size-medium\\">
      <div class=\\"arco-descriptions-title\\">User Info</div>
      <div class=\\"arco-descriptions-body\\">
        <table class=\\"arco-descriptions-table\\">
          <tbody>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Name</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Mobile</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Residence</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
            </tr>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Hometown</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: right;\\">Address</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"3\\">Yingdu Building, Zhichun Road, Beijing</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-descriptions arco-descriptions-layout-inline-vertical arco-descriptions-size-medium\\">
      <div class=\\"arco-descriptions-title\\">User Info</div>
      <div class=\\"arco-descriptions-body\\">
        <table class=\\"arco-descriptions-table\\">
          <tbody>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Name</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Socrates</div>
              </td>
              <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Mobile</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">123-1234-1234</div>
              </td>
              <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Residence</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
              </td>
            </tr>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Hometown</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
              </td>
              <td class=\\"arco-descriptions-item\\" colspan=\\"2\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Address</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Yingdu Building, Zhichun Road, Beijing</div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<descriptions> demo: render [basic] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical arco-space-fill\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"arco-descriptions arco-descriptions-layout-inline-horizontal arco-descriptions-size-medium\\">
      <div class=\\"arco-descriptions-title\\">User Info</div>
      <div class=\\"arco-descriptions-body\\">
        <table class=\\"arco-descriptions-table\\">
          <tbody>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Name</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Socrates</div>
              </td>
              <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Mobile</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">123-1234-1234</div>
              </td>
              <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Residence</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
              </td>
            </tr>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Hometown</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
              </td>
              <td class=\\"arco-descriptions-item\\" colspan=\\"2\\">
                <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Address</div>
                <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Yingdu Building, Zhichun Road, Beijing</div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-descriptions arco-descriptions-layout-horizontal arco-descriptions-size-medium\\">
      <div class=\\"arco-descriptions-title\\">User Info</div>
      <div class=\\"arco-descriptions-body\\">
        <table class=\\"arco-descriptions-table\\">
          <tbody>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Name</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\"><span class=\\"arco-tag arco-tag-size-medium arco-tag-checked\\"><!--v-if-->Socrates<!--v-if--><!--v-if--></span></td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Mobile</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\"><span class=\\"arco-tag arco-tag-size-medium arco-tag-checked\\"><!--v-if-->123-1234-1234<!--v-if--><!--v-if--></span></td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Residence</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\"><span class=\\"arco-tag arco-tag-size-medium arco-tag-checked\\"><!--v-if-->Beijing<!--v-if--><!--v-if--></span></td>
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Hometown</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\"><span class=\\"arco-tag arco-tag-size-medium arco-tag-checked\\"><!--v-if-->Beijing<!--v-if--><!--v-if--></span></td>
            </tr>
            <tr class=\\"arco-descriptions-row\\">
              <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Address</td>
              <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"7\\"><span class=\\"arco-tag arco-tag-size-medium arco-tag-checked\\"><!--v-if-->Yingdu Building, Zhichun Road, Beijing<!--v-if--><!--v-if--></span></td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<descriptions> demo: render [bordered] correctly 1`] = `
"<div class=\\"arco-descriptions arco-descriptions-layout-horizontal arco-descriptions-size-medium arco-descriptions-border\\">
  <div class=\\"arco-descriptions-title\\">User Info</div>
  <div class=\\"arco-descriptions-body\\">
    <table class=\\"arco-descriptions-table\\">
      <tbody>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Name</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Mobile</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Residence</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Hometown</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Address</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"3\\">Yingdu Building, Zhichun Road, Beijing</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`<descriptions> demo: render [layout] correctly 1`] = `
"<div class=\\"arco-descriptions arco-descriptions-layout-horizontal arco-descriptions-size-medium arco-descriptions-border\\">
  <div class=\\"arco-descriptions-title\\">User Info (horizontal)</div>
  <div class=\\"arco-descriptions-body\\">
    <table class=\\"arco-descriptions-table\\">
      <tbody>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Name</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Mobile</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Residence</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Hometown</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Address</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"3\\">Yingdu Building, Zhichun Road, Beijing</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
<div class=\\"arco-descriptions arco-descriptions-layout-inline-horizontal arco-descriptions-size-medium arco-descriptions-border\\">
  <div class=\\"arco-descriptions-title\\">User Info (inline-horizontal)</div>
  <div class=\\"arco-descriptions-body\\">
    <table class=\\"arco-descriptions-table\\">
      <tbody>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Name</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Socrates</div>
          </td>
          <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Mobile</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">123-1234-1234</div>
          </td>
          <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Residence</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
          </td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Hometown</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
          </td>
          <td class=\\"arco-descriptions-item\\" colspan=\\"2\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Address</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Yingdu Building, Zhichun Road, Beijing</div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
<div class=\\"arco-descriptions arco-descriptions-layout-vertical arco-descriptions-size-medium arco-descriptions-border\\">
  <div class=\\"arco-descriptions-title\\">User Info (vertical)</div>
  <div class=\\"arco-descriptions-body\\">
    <table class=\\"arco-descriptions-table\\">
      <tbody>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Name</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Mobile</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Residence</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Hometown</td>
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"2\\">Address</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"2\\">Yingdu Building, Zhichun Road, Beijing</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
<div class=\\"arco-descriptions arco-descriptions-layout-inline-vertical arco-descriptions-size-medium arco-descriptions-border\\">
  <div class=\\"arco-descriptions-title\\">User Info (inline-vertical)</div>
  <div class=\\"arco-descriptions-body\\">
    <table class=\\"arco-descriptions-table\\">
      <tbody>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Name</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Socrates</div>
          </td>
          <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Mobile</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">123-1234-1234</div>
          </td>
          <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Residence</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
          </td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item\\" colspan=\\"1\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Hometown</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
          </td>
          <td class=\\"arco-descriptions-item\\" colspan=\\"2\\">
            <div class=\\"arco-descriptions-item-label arco-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Address</div>
            <div class=\\"arco-descriptions-item-value arco-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Yingdu Building, Zhichun Road, Beijing</div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`<descriptions> demo: render [single] correctly 1`] = `
"<div class=\\"arco-descriptions arco-descriptions-layout-horizontal arco-descriptions-size-medium\\">
  <div class=\\"arco-descriptions-title\\">User Info</div>
  <div class=\\"arco-descriptions-body\\">
    <table class=\\"arco-descriptions-table\\">
      <tbody>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Name</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Mobile</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Residence</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Hometown</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
        </tr>
        <tr class=\\"arco-descriptions-row\\">
          <td class=\\"arco-descriptions-item-label arco-descriptions-item-label-block\\" style=\\"text-align: left;\\">Address</td>
          <td class=\\"arco-descriptions-item-value arco-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Yingdu Building, Zhichun Road, Beijing</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
